Bug 138986 - Assertion error when saving docx file to doc
Summary: Assertion error when saving docx file to doc
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Regényi
URL:
Whiteboard: target:7.2.0 target:7.1.0.2
Keywords:
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2020-12-17 07:31 UTC by NISZ LibreOffice Team
Modified: 2021-01-12 10:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-12-17 07:31:28 UTC
As reported here:
https://gerrit.libreoffice.org/c/core/+/105299/22#message-ac5ba9e4712c779b2f5e61322e1a797623099a38

"To reproduce...

wget https://bugs.documentfoundation.org/attachment.cgi?id=79084 -O fdo64424-1.docx
./instdir/program/soffice.bin --headless --convert-to doc ./fdo64424-1.docx

output is:
sw/source/filter/ww8/wrtw8nds.cxx:670: FlyProcessingState SwWW8AttrIter::OutFlys(sal_Int32): Assertion `!sLinkChainName.isEmpty()' failed."
Comment 1 Commit Notification 2020-12-21 16:06:03 UTC
Regényi Balázs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f80dcee922428fa564b4779b1f81ad087db937ae

tdf#138986 Fix DOC export of LinkDisplayName

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2020-12-21 20:59:36 UTC
Regényi Balázs committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/b5a02acda8396c108e21e72fc830cc41a0bc890c

tdf#138986 Fix DOC export of LinkDisplayName

It will be available in 7.1.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2021-01-12 10:44:48 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 96bafa464ebdbce3ef04bec9beae5e745bb37794
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded