tdf#138986 Fix DOC export of LinkDisplayName

The LinkedDisplayName could be empty what caused an assert.

tdf#138986 regression from commit: bda05ba17362222b74727872579b65b3fa14e3d8
(tdf#41466 DOCX import: fix VML v:shape/v:textbox)

Change-Id: I166a7e4c1defc201d0563a961b28ecb6c6be500c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108077
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit f80dcee922428fa564b4779b1f81ad087db937ae)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108008